--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
