--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.5",
     "express": "^4.15.0",
     "mongoose": "^4.8.6",
     "react": "^15.4.2",
