--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.17.2",
     "cors": "^2.8.5",
     "express": "^4.15.0",
