--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "build": "webpack --target web",
+    "seed": "mongoimport --host localhost --port 27017 --db psaDb --collection psas --jsonArray --file /home/patrick/mvp/documentation/sourceData/psa.json"
   },
   "author": "Patrick Gosack",
   "license": "MIT",
